--- a/assets/css/skylith.css
+++ b/assets/css/skylith.css
@@ -8203,8 +8203,8 @@ blockquote.nk-blockquote-style-1 cite {
 
 blockquote.nk-blockquote-style-2 {
     display: block;
-    padding: 35px 50px;
-    margin-top: 50px;
+    padding: 15px 10px 4px;
+    margin-top: 15px;
     margin-bottom: 50px;
     font-size: 1.1rem;
     font-style: italic;
