--- a/assets/css/mhy-custom.css
+++ b/assets/css/mhy-custom.css
@@ -1,4 +1,4 @@
-/*Index Page*/
+/*Index Page: Lines 2-13*/
 .about-us-box-black{
     background-color: black;
 }
@@ -12,8 +12,8 @@
     font-size:0.8em;
 }
 
-/*Feature Page*/
-/* Modified Carousel control icons to black */
+/*Feature Page: Lines 17-64*/
+/* Modified Carousel control icons to black: Lines 17-24 */
 .carousel-control-prev-icon {
     background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='black' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E");
     color: black;
@@ -23,8 +23,42 @@
     color: black;
 }
 
-/*Feature Page*/
-/* Fixed modal display issue */
+/* Center-align News Articles */
+.article-fig {
+    display: block;
+    text-align: center;
+}
+
+/* Articles catered for responsiveness by bootstrap */
+div > figure > a > img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+/* Set sizing for Award Images: Lines 39-45 */
+.img-modal {
+    width: 200px;
+    height: 280px;
+}
+.img-modal-mid {
+    height: 135px;
+}
+
+/* Center-align Awards *w/o affecting Award Year* */
+div .awards-fig {
+    width: 200px;
+    margin: auto;
+}
+
+/* Center-align Award captions */
+div > figure > p {
+    text-align: center;
+}
+
+/* Fixed modal display issue: Lines 59-64 */
 .modal-backdrop {
     z-index: -1;
+}
+.modal-open {
+    padding-right:0 !important;
 }
